# uniquant

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
configs/: codes.yaml  config.toml
configs/locales/: en.ftl  zh-CN.ftl
crates/entities/: Cargo.toml
crates/entities/src/: instrument.rs  prelude.rs
crates/migration/: Cargo.toml
docs/: development_guide.md
src/: lib.rs  main.rs
src/api/: error.rs  mod.rs
src/api/instrument/: handler.rs  routes.rs
src/api/middleware/: context.rs
src/core/: config.rs  db.rs  logger.rs  logging.rs  mod.rs
src/db/: connection.rs  error.rs  mod.rs
src/db/repositories/: instrument.rs  mod.rs
src/dto/: instrument.rs  mod.rs  response.rs
src/entities/: instrument.rs  mod.rs  user.rs
src/entity/: instrument.rs
src/error/: app_code.rs  code.rs  i18n.rs  message.rs  mod.rs
src/i18n/: fluent.rs  mod.rs
src/macros/: convert.rs  mod.rs
src/migration/src/: m20220101_000001_create_table.rs
src/service/: factory.rs  instrument.rs  mod.rs
src/web/: handlers.rs  routes.rs
tools/ftl-codegen/: Cargo.toml
tools/ftl-codegen/src/: check.rs  cli.rs  codegen.rs  diff.rs  main.rs  parser.rs
