[package]
name = "uniquant"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Web 框架 ---
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1.47.1", features = ["full", "time", "macros"] }

# --- ORM 数据库 ---
sea-orm = { version = "1.1", features = [
    "runtime-tokio-rustls", # 异步运行时 + TLS 支持
    "sqlx-postgres",        # Postgres 驱动
    "macros"                # 派生 Entity/Model
] }
sea-orm-migration = "1.1" # 迁移工具

# --- OpenAPI 文档 ---
utoipa = { version = "5.4", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# --- Observability ---
tracing = { version = "0.1", features = ["attributes", "std", "log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
tracing-error = "0.2"
tracing-attributes = "0.1.30"

# --- 配置管理 ---
figment = { version = "0.10", features = ["toml", "env", "yaml"] }
config = { version = "0.15", features = ["toml", "yaml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 错误处理 ---
thiserror = "2"
anyhow = "1"

# --- 其他常用工具 ---
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }