[package]
name = "uniquant"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/entities", "crates/migration"]

[dependencies]
migration = { path = "crates/migration" }
entities = { path = "crates/entities" }

# --- Web 框架 ---
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1.47.1", features = ["full", "time", "macros"] }

# --- ORM 数据库 ---
# 教程:https://www.sea-ql.org/sea-orm-tutorial/ch00-00-introduction.html
sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres", 
    "sqlx-sqlite", 
    "runtime-tokio-rustls", 
    "macros", 
    "debug-print",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1.16", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
sea-query = "0.32.7"



# --- OpenAPI 文档 ---
utoipa = { version = "5.4", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# --- Observability ---
tracing = { version = "0.1", features = ["attributes", "std", "log"] }
tracing-subscriber = { version = "0.3", features = [    
    "std",
    "env-filter",
    "registry",
    "local-time",
    "fmt",
    "json"
] }
tracing-error = "0.2"
tracing-attributes = "0.1.30"
tracing-log = "0.2.0"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.31.0"


# OpenTelemetry, 需要参考仓库/文档: https://github.com/open-telemetry/opentelemetry-rust/pull/2221
# opentelemetry = { version = "0.31", features = ["trace"] }
# opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "logs"] }
# opentelemetry-otlp = { version = "0.31", features = ["trace", "logs", "grpc-tonic"] }
# opentelemetry-appender-tracing = "0.31"
# opentelemetry-semantic-conventions = "0.31"

# --- 配置管理 ---
config = { version = "0.15", features = ["toml", "yaml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

# --- 错误处理 ---
thiserror = "2.0.17"
anyhow = "1"

# --- 其他常用工具 ---
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
url = "2.5.7"
tonic = { version = "0.14"}
async-trait = "0.1.89"
once_cell = "1.21.3"
tera = "1.20.0"
